Implementation of attachments, crypto, mote updates and field defaults.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   webcrypto: ^0.5.2
   tuple: ^2.0.0
   http: ^0.13.4
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
